# RedisClient

./: CMakeLists.txt  RedisClient.sln
RedisClient/: RSyncClient.h  RUtil.cpp  RVariant.cpp  ReadMe.txt  RedisClient.vcxproj  RedisClient.vcxproj.filters  stdafx.cpp
RedisClient_Unittest/: ReadMe.txt  RedisClient_Unittest.cpp  RedisClient_Unittest.vcxproj  RedisClient_Unittest.vcxproj.filters  stdafx.cpp
example/: CMakeLists.txt  RedisClient_Unittest.cpp  async_set_get.cpp  publish_subscribe.cpp  sync_set_get.cpp
include/: RAsyncClient.h  RSyncClient.h  RUtil.h  RVariant.h  RedisClient_global.h
src/: CMakeLists.txt  RAsyncClient.cpp  RSyncClient.cpp  RUtil.cpp  RVariant.cpp  stdafx.cpp
